# agentic-auditing

./: .gitignore  .mcp.json  README.md  pyproject.toml
auditing/: SKILL.md
ground_truth/: agentic_audit_with_answer.csv
pair_trading/: SKILL.md
report_evaluation/: SKILL.md
report_generation/: SKILL.md
results/auditing/: claude-code_auditing_10k_aep_20211231_demo_1_claude-opus-4-6.json  claude-code_auditing_10k_aep_20211231_mr_1_claude-opus-4-6.json  claude-code_auditing_10k_rdvt_20211231_smoke_1_claude-opus-4-6.json  claude-code_auditing_10k_rrr_20231231_bt_10_claude-opus-4-6.json  claude-code_auditing_10k_rrr_20231231_bt_1_claude-opus-4-6.json  claude-code_auditing_10k_rrr_20231231_bt_2_claude-opus-4-6.json  claude-code_auditing_10k_rrr_20231231_bt_3_claude-opus-4-6.json  claude-code_auditing_10k_rrr_20231231_bt_4_claude-opus-4-6.json  claude-code_auditing_10k_rrr_20231231_bt_5_claude-opus-4-6.json  claude-code_auditing_10k_rrr_20231231_bt_6_claude-opus-4-6.json  claude-code_auditing_10k_rrr_20231231_bt_7_claude-opus-4-6.json  claude-code_auditing_10k_rrr_20231231_bt_8_claude-opus-4-6.json  claude-code_auditing_10k_rrr_20231231_bt_9_claude-opus-4-6.json  claude-code_auditing_10k_rrr_20231231_demo_hard_1_claude-opus-4-6.json  claude-code_auditing_10k_rrr_20231231_demo_hard_2_claude-opus-4-6.json
src/: auditmcp.py
tests/: conftest.py  test_find_filing.py  test_get_calculation_network.py  test_get_concept_metadata.py  test_get_facts.py  test_normalize_concept.py  test_period_parsing.py  test_write_audit_result.py
trading/: SKILL.md
(+8 files in other folders)
